Update default output of demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,40 +111,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'code': 'public int additionTest ( int a , int b ) { return a > b ; }',\n",
-       "  'location': 13,\n",
-       "  'before': '+',\n",
-       "  'after': '>',\n",
-       "  'score': 0.3605694422459369},\n",
-       " {'code': 'public int additionTest ( int a , int b ) { return a < b ; }',\n",
-       "  'location': 13,\n",
-       "  'before': '+',\n",
-       "  'after': '<',\n",
-       "  'score': 0.1880156641423118},\n",
-       " {'code': 'public int additionTest ( int a , int b ) { return a >= b ; }',\n",
-       "  'location': 13,\n",
-       "  'before': '+',\n",
-       "  'after': '>=',\n",
-       "  'score': 0.1617198824838041},\n",
-       " {'code': 'public int additionTest ( int a , int b ) { return a - b ; }',\n",
+       "[{'code': 'public int additionTest ( int a , int b ) { return a - b ; }',\n",
        "  'location': 13,\n",
        "  'before': '+',\n",
        "  'after': '-',\n",
-       "  'score': 0.1067578773077604},\n",
-       " {'code': 'public int additionTest ( int a , int b ) { return a == b ; }',\n",
+       "  'score': 0.8357382491308553},\n",
+       " {'code': 'public int additionTest ( int a , int b ) { return a * b ; }',\n",
        "  'location': 13,\n",
        "  'before': '+',\n",
-       "  'after': '==',\n",
-       "  'score': 0.07315896729156009}]"
+       "  'after': '*',\n",
+       "  'score': 0.08246741274092674},\n",
+       " {'code': 'public int additionTest ( int a , int b ) { return a % b ; }',\n",
+       "  'location': 13,\n",
+       "  'before': '+',\n",
+       "  'after': '%',\n",
+       "  'score': 0.07746933939678168},\n",
+       " {'code': 'public int additionTest ( int a , int b ) { return a / b ; }',\n",
+       "  'location': 13,\n",
+       "  'before': '+',\n",
+       "  'after': '/',\n",
+       "  'score': 0.004324998731436322}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,22 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'code': 'public void test ( Object input ) { if ( input != null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '!=', 'score': 0.9624839110581414}\n",
+      "{'code': 'public void test ( Object input ) { if ( input != null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '!=', 'score': 0.9630580979475802}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input <= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<=', 'score': 0.027384249670528885}\n",
+      "{'code': 'public void test ( Object input ) { if ( input <= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<=', 'score': 0.027400586231542824}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input < null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<', 'score': 0.008271744622112507}\n",
+      "{'code': 'public void test ( Object input ) { if ( input < null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<', 'score': 0.008276679278432716}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input >= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>=', 'score': 0.000676133948626892}\n",
+      "{'code': 'public void test ( Object input ) { if ( input >= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>=', 'score': 0.0006765373083551386}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input > null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>', 'score': 0.0005877486022105648}\n",
+      "{'code': 'public void test ( Object input ) { if ( input > null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>', 'score': 0.0005880992340889763}\n",
       "----\n"
      ]
     }
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +314,7 @@
      "text": [
       "Loose mutation\n",
       "----------------------------------------------------------------\n",
-      "public void test ( Object input ) { if ( input + null ) { return ; } handle ( input ) ; }\n",
+      "public void test ( Object input ) { if ( input / null ) { return ; } handle ( input ) ; }\n",
       "\n",
       "Strict mutation\n",
       "----------------------------------------------------------------\n",
