--- a/demo.ipynb
+++ b/demo.ipynb
@@ -13,6 +13,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Setup the project\n",
+    "First, we have to locally install the project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "Cloning into 'tmp'...\n",
+      "remote: Enumerating objects: 122, done.\u001b[K\n",
+      "remote: Counting objects: 100% (122/122), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (71/71), done.\u001b[K\n",
+      "remote: Total 122 (delta 51), reused 119 (delta 48), pack-reused 0\u001b[K\n",
+      "Receiving objects: 100% (122/122), 65.31 KiB | 777.00 KiB/s, done.\n",
+      "Resolving deltas: 100% (51/51), done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir tmp\n",
+    "!git clone https://github.com/cedricrupb/ctxmutants.git tmp/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tmp\n",
+    "\n",
+    "!pip install -r requirements.txt\n",
+    "\n",
+    "import ctxmutants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup preprocessing\n",
     "As a first step, we setup the preprocessing of the code to be mutated. Here,\n",
     "we employ a specific syntactic tagger that preserves semantic roles of tokens."
@@ -20,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +192,7 @@
        "  'score': 0.004324998731436322}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -314,11 +367,11 @@
      "text": [
       "Loose mutation\n",
       "----------------------------------------------------------------\n",
-      "public void test ( Object input ) { if ( input / null ) { return ; } handle ( input ) ; }\n",
+      "public void test ( Object input ) { if ( input >> null ) { return ; } handle ( input ) ; }\n",
       "\n",
       "Strict mutation\n",
       "----------------------------------------------------------------\n",
-      "public void test ( Object input ) { if ( input >= null ) { return ; } handle ( input ) ; }\n",
+      "public void test ( Object input ) { if ( input != null ) { return ; } handle ( input ) ; }\n",
       "\n",
       "Contextual mutation\n",
       "----------------------------------------------------------------\n",
