--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Learning Realistic Mutations: Bug Creation for Neural Bug Detection\n",
     "This accompanying notebook is an interactive demo for our contextual mutator. The goal is to inject realistic\n",
-    "bugs into code based on the context."
+    "bugs into code based on the code context."
    ]
   },
   {
@@ -19,28 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "Cloning into 'tmp'...\n",
-      "remote: Enumerating objects: 122, done.\u001b[K\n",
-      "remote: Counting objects: 100% (122/122), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (71/71), done.\u001b[K\n",
-      "remote: Total 122 (delta 51), reused 119 (delta 48), pack-reused 0\u001b[K\n",
-      "Receiving objects: 100% (122/122), 65.31 KiB | 777.00 KiB/s, done.\n",
-      "Resolving deltas: 100% (51/51), done.\n"
+      "remote: Enumerating objects: 132, done.\u001b[K\n",
+      "remote: Counting objects: 100% (132/132), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (77/77), done.\u001b[K\n",
+      "remote: Total 132 (delta 57), reused 127 (delta 52), pack-reused 0\u001b[K\n",
+      "Receiving objects: 100% (132/132), 66.91 KiB | 2.57 MiB/s, done.\n",
+      "Resolving deltas: 100% (57/57), done.\n"
      ]
     }
    ],
@@ -51,9 +43,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/cedricr/Documents/WorkDir/SCAD/ctxmutants/tmp\n",
+      "Requirement already satisfied: torch>=1.8.0 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 1)) (1.8.0)\n",
+      "Requirement already satisfied: transformers in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 2)) (4.3.3)\n",
+      "Requirement already satisfied: fasttext in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 3)) (0.9.2)\n",
+      "Requirement already satisfied: numpy in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 4)) (1.19.5)\n",
+      "Requirement already satisfied: esprima in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 5)) (4.0.1)\n",
+      "Requirement already satisfied: javalang in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 6)) (0.13.0)\n",
+      "Requirement already satisfied: libcst in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from -r requirements.txt (line 7)) (0.3.19)\n",
+      "Requirement already satisfied: typing-extensions in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from torch>=1.8.0->-r requirements.txt (line 1)) (3.7.4.3)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (2021.7.6)\n",
+      "Requirement already satisfied: filelock in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (3.0.12)\n",
+      "Requirement already satisfied: requests in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (2.25.1)\n",
+      "Requirement already satisfied: tokenizers<0.11,>=0.10.1 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (0.10.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (4.61.2)\n",
+      "Requirement already satisfied: packaging in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (21.0)\n",
+      "Requirement already satisfied: sacremoses in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 2)) (0.0.43)\n",
+      "Requirement already satisfied: setuptools>=0.7.0 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from fasttext->-r requirements.txt (line 3)) (58.4.0)\n",
+      "Requirement already satisfied: pybind11>=2.2 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from fasttext->-r requirements.txt (line 3)) (2.7.0)\n",
+      "Requirement already satisfied: six in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from javalang->-r requirements.txt (line 6)) (1.15.0)\n",
+      "Requirement already satisfied: pyyaml>=5.2 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from libcst->-r requirements.txt (line 7)) (5.4.1)\n",
+      "Requirement already satisfied: typing-inspect>=0.4.0 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from libcst->-r requirements.txt (line 7)) (0.7.1)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from typing-inspect>=0.4.0->libcst->-r requirements.txt (line 7)) (0.4.3)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from packaging->transformers->-r requirements.txt (line 2)) (2.4.7)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from requests->transformers->-r requirements.txt (line 2)) (1.26.6)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from requests->transformers->-r requirements.txt (line 2)) (2021.10.8)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from requests->transformers->-r requirements.txt (line 2)) (4.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from requests->transformers->-r requirements.txt (line 2)) (2.10)\n",
+      "Requirement already satisfied: click in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from sacremoses->transformers->-r requirements.txt (line 2)) (7.1.2)\n",
+      "Requirement already satisfied: joblib in /Users/cedricr/miniforge3/envs/py38/lib/python3.8/site-packages (from sacremoses->transformers->-r requirements.txt (line 2)) (1.0.1)\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tmp\n",
     "\n",
@@ -67,13 +95,13 @@
    "metadata": {},
    "source": [
     "## Setup preprocessing\n",
-    "As a first step, we setup the preprocessing of the code to be mutated. Here,\n",
+    "Now, we can setup the preprocessing pipeline for preprocessing code that should be mutated. Here,\n",
     "we employ a specific syntactic tagger that preserves semantic roles of tokens."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +141,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `tokenize_code` function has successfully (1) identified the functions in the code snippet, (2) produced a tokenized version of the function and (3) computed syntactic types\n",
-    "of each token. We will investigate the latter."
+    "The `tokenize_code` function successfully (1) identified the functions in the code snippet, (2) produced a tokenized version of each function and (3) computed syntactic types of each token. In the following, we only consider the function discovered first and before we mutate the tokenized code we investigate the token types in the following."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,15 +183,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that each token is assigned a specific syntactic role based on the context it appears in. For example, the identifier `a` is both tagged as a variable definition and variable usage dependent on the program location."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup contextual mutation\n",
-    "The contextual mutation process consists of two steps: (1) we employ\n",
-    "a base mutator to generate mutation candidates and (2) select a mutation\n",
-    "candidate with a masked language model."
+    "Contextual mutators are here implemented within two steps. First, we enumerate potential mutant candidates\n",
+    "by applying a base mutator. Then, we assign a likelihood of seeing a mutant by running a masked language model.\n",
+    "Mutants are produced by sampling according to this likelihood."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +226,7 @@
        "  'score': 0.004324998731436322}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +245,7 @@
     "def ctx_mutate(tokens, types, location = None, topK = 5):\n",
     "\n",
     "    # (1) Select location and base mutator\n",
-    "    base_mutators = {\"USE_VAR\": weak_varmisuse_mutation, \"BOP\": strong_binary_mutation}\n",
+    "    base_mutators = {\"USE_VAR\": weak_varmisuse_mutation, \"BOP\": strong_binary_mutation} # Option: replace strong_binary_mutation by weak_binary_mutation\n",
     "    if location is None: \n",
     "        candidate_locs = [i for i, t in enumerate(types) if t.name in base_mutators]\n",
     "        assert len(candidate_locs) > 0\n",
@@ -258,13 +292,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We see that replacing the addition with a subtraction is the most likely mutation. To see why it is important to restrict the mutation\n",
+    "candidates to syntactically fitting candidates, please replace `strong_binary_mutation` by `weak_binary_mutation` and run the code again. What do you observe?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Playground\n",
-    "Here we have a small playground to use our contextual mutator"
+    "Now, it is your turn to play with contextual mutations. Use the variable `source_code` to process your own code.\n",
+    "After running the next cell, choose a potential mutation location or leave it to the algorithm."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +317,7 @@
       "Tokens:\n",
       "['public', 'void', 'test', '(', 'Object', 'input', ')', '{', 'if', '(', 'input', '==', 'null', ')', '{', 'return', ';', '}', 'handle', '(', 'input', ')', ';', '}']\n",
       "\n",
-      "Available mutation locations:\n",
+      "Available mutation locaions:\n",
       "Loc 10 | Token: input  | Type: USE_VAR | Ctx: { if ( input == null\n",
       "Loc 11 | Token: ==  | Type: BOP | Ctx: if ( input == null )\n",
       "Loc 20 | Token: input  | Type: USE_VAR | Ctx: } handle ( input ) ;\n"
@@ -299,7 +342,7 @@
     "print(\"Tokens:\")\n",
     "print(tokens)\n",
     "print()\n",
-    "print(\"Available mutation locations:\")\n",
+    "print(\"Available mutation locaions:\")\n",
     "\n",
     "for i, token in enumerate(tokens):\n",
     "    type = types[i]\n",
@@ -312,27 +355,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choose a mutant location and the contextual mutator will produce some candidates."
+    "Choose a mutant location such that the contextual mutator can produce some mutation candidates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'code': 'public void test ( Object input ) { if ( input != null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '!=', 'score': 0.9630580979475802}\n",
+      "{'code': 'public void test ( Object input ) { if ( input != null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '!=', 'score': 0.9630580979475805}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input <= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<=', 'score': 0.027400586231542824}\n",
+      "{'code': 'public void test ( Object input ) { if ( input <= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<=', 'score': 0.02740058623154283}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input < null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<', 'score': 0.008276679278432716}\n",
+      "{'code': 'public void test ( Object input ) { if ( input < null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '<', 'score': 0.008276679278432718}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input >= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>=', 'score': 0.0006765373083551386}\n",
+      "{'code': 'public void test ( Object input ) { if ( input >= null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>=', 'score': 0.0006765373083551387}\n",
       "----\n",
-      "{'code': 'public void test ( Object input ) { if ( input > null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>', 'score': 0.0005880992340889763}\n",
+      "{'code': 'public void test ( Object input ) { if ( input > null ) { return ; } handle ( input ) ; }', 'location': 11, 'before': '==', 'after': '>', 'score': 0.0005880992340889765}\n",
       "----\n"
      ]
     }
@@ -352,26 +395,26 @@
    "metadata": {},
    "source": [
     "### Comparison between mutation types\n",
-    "For your example in playgrounds, we will now compute representative\n",
-    "mutants for each mutation type."
+    "This section also belongs to the playground and, hence, uses the same code and location defined in the previous section.\n",
+    "Here, we want to highlight the difference between different mutator types used in neural bug detection, mutation testing and in our paper."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loose mutation\n",
+      "Loose mutation (as used in neural bug detection)\n",
       "----------------------------------------------------------------\n",
-      "public void test ( Object input ) { if ( input >> null ) { return ; } handle ( input ) ; }\n",
+      "public void test ( Object input ) { if ( input | null ) { return ; } handle ( input ) ; }\n",
       "\n",
-      "Strict mutation\n",
+      "Strict mutation (as used in mutation testing)\n",
       "----------------------------------------------------------------\n",
-      "public void test ( Object input ) { if ( input != null ) { return ; } handle ( input ) ; }\n",
+      "public void test ( Object input ) { if ( input >= null ) { return ; } handle ( input ) ; }\n",
       "\n",
       "Contextual mutation\n",
       "----------------------------------------------------------------\n",
@@ -408,7 +451,7 @@
     "ctx_mutation_dist = {m[\"after\"] : m[\"score\"] for m in mutations}\n",
     "ctx_mutant = sample_mutation(ctx_mutation_dist)\n",
     "\n",
-    "for mutant_type, mutant in [(\"Loose mutation\", loose_mutant) , (\"Strict mutation\", strong_mutant), (\"Contextual mutation\", ctx_mutant)]:\n",
+    "for mutant_type, mutant in [(\"Loose mutation (as used in neural bug detection)\", loose_mutant) , (\"Strict mutation (as used in mutation testing)\", strong_mutant), (\"Contextual mutation\", ctx_mutant)]:\n",
     "    print(mutant_type)\n",
     "    print(\"----------------------------------------------------------------\")\n",
     "\n",
